fix bug with footer; change visibility of SideBlock;

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -215,7 +215,10 @@ a:visited {
 
 .App {
     width: 100vw;
-    height: 100vh;
+    // height: 100vh;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 
     header {
         display: -webkit-box;
@@ -300,8 +303,9 @@ a:visited {
     }
     
     .Blog {
+        flex: 1;
         width: 80%;
-        min-height: 77vh; //todo ???
+        // min-height: 77vh; //todo ???
         margin: 0 auto;
         padding-top: 50px;
 
@@ -546,7 +550,7 @@ a:visited {
     }
 
     footer {
-        position: absolute;
+        // position: absolute;
         //margin-bottom: 0;
         width: 100%;
         height: 40px;
